test/rewriter/errors/expr_integer_literal_binary.expected
File "expr_integer_literal_binary.ml", line 1, characters 39-150:
Error: ppx_yojson: unsupported payload